--- a/realtime_object_detection_website.html
+++ b/realtime_object_detection_website.html
@@ -93,7 +93,7 @@
  <p>
    <a href="https://www.linkedin.com/in/eswar-potti" target="_blank">LinkedIn</a> |
    <a href="https://github.com/eswarpotti3" target="_blank">GitHub</a> |
-   <a href="Contact" target="_blank">GitHub</a> |
+   <a href="Contact" target="_blank">Gmail</a> |
  </p>
 </footer>
 <script>
